--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # setting the prefix frfom C-b to S-j
-set -g prefix C-j
+set -g prefix C-a
 
 # Free the original C-b prefix keybinding
 unbind C-b
