--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
-# setting the prefix frfom C-b to S-j
-set -g prefix C-a
+# setting the prefix frfom C-b to C-s
+set -g prefix C-s
 
 # Free the original C-b prefix keybinding
 unbind C-b
