--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,12 +14,10 @@ bind | split-window -h
 bind - split-window -v
 
 # Remap pane movement to hjkl
-# -r flag makes these commands repeatable
-# within 500ms
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Quick window selection
 bind -r C-h select-window -t :-
