updates files to use gruvbox theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,3 +31,6 @@ bind -r L resize-pane -R 5
 
 # Turns the mouse off - pretty hardcore lol
 set -g mouse off
+
+#  Theme
+set -g window-active-style 'bg=colour233'
